Updates to control margin of annotations block Fixes https://github.com/openshift/origin-web-console/issues/1083

--- a/app/styles/_substructure.less
+++ b/app/styles/_substructure.less
@@ -285,10 +285,7 @@ html,body {
 // middle-content area in order to achieve consistent bottom spacing across all pages
 .middle-content {
   annotations {
-    &:last-child,
-    p {
-      margin-bottom: 0;
-    }
+    display: block;
   }
   pods-table,
   traffic-table {
